--- a/EasyVisaCaseStudy_FullCode_ErikVagshenian.ipynb
+++ b/EasyVisaCaseStudy_FullCode_ErikVagshenian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOI7Gi1DTpAhfZoSrM7agF3",
+      "authorship_tag": "ABX9TyOpAvP0P4udWq4oPN8COxHb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,14 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### Summary:\n",
+        "\n",
+        "The U.S. Office of Foreign Labor Certification (OFLC) reviews visa applications to decide whether they should be certified or denied. With rising application volumes, EasyVisa is developing a machine learning model to predict these outcomes based on key applicant and employer details like education, experience, wages, and job location. This will help automate and speed up decision-making while ensuring fairness and consistency.\n",
+        "\n",
+        "Deductions:\n",
+        "This is a binary classification problem with a known y value and two outcomes: certified or denied. Both are equally important: predicting denials accurately prevents invalid approvals, while correctly identifying certifications ensures qualified applicants aren’t rejected. The model must therefore balance both outcomes to support efficient and equitable visa processing."
+      ],
       "metadata": {
         "id": "JN_TPduw7qKh"
       }
@@ -105,6 +112,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary:\n",
+        "\n",
+        "Installs required Python packages (NumPy, Pandas, scikit-learn, Matplotlib, Seaborn, XGBoost, Imbalanced-learn) to enable EDA, modeling, and class-imbalance handling."
+      ],
+      "metadata": {
+        "id": "l3Akydye8r07"
+      }
     },
     {
       "cell_type": "code",
@@ -163,6 +181,18 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary:\n",
+        "\n",
+        "\n",
+        "Imports all key libraries for data processing, visualization, model building, and evaluation. Establishes consistent settings, enables handling of class imbalance with SMOTE, and sets a random seed for reproducible machine learning results."
+      ],
+      "metadata": {
+        "id": "H3opsq8J9eTW"
+      }
     },
     {
       "cell_type": "code",
@@ -942,6 +972,18 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary:\n",
+        "\n",
+        "\n",
+        "The dataset contains 25,480 visa applications across 12 columns describing both employee and employer attributes. The first and last five rows show that records include a mix of categorical variables (such as continent, education, experience, and job region) and numerical variables (such as number of employees, year of establishment, and prevailing wage). This combination indicates a structured dataset suitable for a supervised classification problem, where the target variable case_status (Certified or Denied) reflects visa approval outcomes."
+      ],
+      "metadata": {
+        "id": "eJGONlgE-tPp"
+      }
     },
     {
       "cell_type": "code",
