--- a/EasyVisaCaseStudy_FullCode_ErikVagshenian.ipynb
+++ b/EasyVisaCaseStudy_FullCode_ErikVagshenian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOpAvP0P4udWq4oPN8COxHb",
+      "authorship_tag": "ABX9TyNmj9ecy2iiTPs8SKCSnxVR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1537,6 +1537,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary:\n",
+        "\n",
+        "The statistical summary shows consistent numerical data overall, but the number of employees column contains negative values that will need to be corrected before analysis. Categorical variables such as continent, education level, and employment region have clear groupings, with Asia providing the majority of applications and most jobs listed as full-time.\n",
+        "\n",
+        "Reviewing the counts for each category helps identify where certain groups or regions may be overrepresented, which is important for understanding potential bias in visa approval patterns. These insights will guide the necessary data cleaning and preparation steps before building the model."
+      ],
+      "metadata": {
+        "id": "X69JyYEb_tfd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -1995,6 +2008,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary:\n",
+        "\n",
+        "The data was cleaned and standardized to prepare it for modeling. Text-based fields such as Yes/No responses were normalized to a consistent format, and all categorical text was converted to uppercase for uniformity. Invalid negative values in the number of employees column were corrected using the median of valid values, ensuring numerical consistency.\n",
+        "\n",
+        "Prevailing wages were standardized to an annual basis using appropriate conversion factors (e.g., hourly to yearly), and unrealistic establishment years were removed to maintain temporal validity. The target variable case_status was encoded numerically, with Denied as 0 and Certified as 1, allowing for machine learning compatibility.\n",
+        "\n",
+        "After cleaning, the dataset maintained all 25,480 valid records, now consistent, structured, and ready for feature engineering and model training."
+      ],
+      "metadata": {
+        "id": "mSdRMZ_pDU71"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -2295,6 +2323,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary:\n",
+        "\n",
+        "Univariate analysis shows that numerical features such as prevailing wage and number of employees have wide variation, with wages ranging from about $2 to over $300,000 and company sizes extending from very small to extremely large. The distribution of establishment years is concentrated between 1970 and 2016, consistent with modern employers.\n",
+        "\n",
+        "Education levels are led by bachelor’s and master’s degrees, suggesting most applicants are highly qualified. The region of employment is spread across all major U.S. regions, though most applications are concentrated in the Northeast, South, and West. Applicants with prior job experience make up the majority, while relatively few require job training, which could indicate stronger readiness for skilled roles.\n",
+        "\n",
+        "The target variable case_status shows that certifications significantly outnumber denials, meaning most applications are approved. These patterns help identify early trends in how education, region, and experience may influence visa outcomes before deeper model-based analysis."
+      ],
+      "metadata": {
+        "id": "ZB0NOR-5Daxh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -2418,6 +2461,13 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "K4PpdK-_EVSr"
+      }
     },
     {
       "cell_type": "code",
