--- a/EasyVisaCaseStudy_FullCode_ErikVagshenian.ipynb
+++ b/EasyVisaCaseStudy_FullCode_ErikVagshenian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNmj9ecy2iiTPs8SKCSnxVR",
+      "authorship_tag": "ABX9TyPvwStJlzXddFMF27Tz0MvM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2327,7 +2327,7 @@
       "source": [
         "### Summary:\n",
         "\n",
-        "Univariate analysis shows that numerical features such as prevailing wage and number of employees have wide variation, with wages ranging from about $2 to over $300,000 and company sizes extending from very small to extremely large. The distribution of establishment years is concentrated between 1970 and 2016, consistent with modern employers.\n",
+        "Univariate analysis shows that numerical features such as prevailing wage and number of employees have wide variation, with wages ranging from about 2 to over 300,000 dollars and company sizes extending from very small to extremely large. The distribution of establishment years is concentrated between 1970 and 2016, consistent with modern employers.\n",
         "\n",
         "Education levels are led by bachelor’s and master’s degrees, suggesting most applicants are highly qualified. The region of employment is spread across all major U.S. regions, though most applications are concentrated in the Northeast, South, and West. Applicants with prior job experience make up the majority, while relatively few require job training, which could indicate stronger readiness for skilled roles.\n",
         "\n",
