--- a/EasyVisa_v4_ErikVagshenian.ipynb
+++ b/EasyVisa_v4_ErikVagshenian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO82srEHzhJ6C4J5hiorsrg",
+      "authorship_tag": "ABX9TyNvWf0rM+Njjak5Ia6hMKIr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,17 +69,6 @@
       }
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "**Problem summary**\n",
-        "\n",
-        "The task predicts visa case_status (Certified vs Denied) from employer and applicant features. This is a binary classification problem with imbalanced classes (Certified ≈ 66.8%, Denied ≈ 33.2%). Both outcomes matter: missing denials risks improper approvals; missing certifications slows hiring. Primary success metrics are Certified recall (TPR for approvals) and Denied specificity (TNR for rejections), with threshold tuning to balance them."
-      ],
-      "metadata": {
-        "id": "hXU8Zimq-hUW"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -90,19 +79,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### Setup, data load, and structure"
+      ],
       "metadata": {
         "id": "5_uMb-F99oEy"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "U6DbdXumcqtg"
-      },
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -114,15 +96,6 @@
       ],
       "metadata": {
         "id": "B6NSo-WbcrlU"
-      },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "Om0sJC4vdGGG"
       },
       "execution_count": 1,
       "outputs": []
@@ -180,10 +153,19 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "oiQptAI4dXv9"
+        "id": "h_ju9k-A_ml-"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Setup, data load, and structure"
+      ],
+      "metadata": {
+        "id": "gCKzXFZZBm1q"
+      }
     },
     {
       "cell_type": "code",
@@ -1312,6 +1294,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Summary**\n",
+        "\n",
+        "\n",
+        "The task predicts visa case_status (Certified vs Denied) from employer and applicant features. This is a binary classification problem with imbalanced classes (Certified ≈ 66.8%, Denied ≈ 33.2%). Both outcomes matter: missing denials risks improper approvals; missing certifications slows hiring. Primary success metrics are Certified recall (TPR for approvals) and Denied specificity (TNR for rejections), with threshold tuning to balance them."
+      ],
+      "metadata": {
+        "id": "mBYQUynjBdcn"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
@@ -1319,6 +1313,13 @@
       },
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "MYslzwI8BvST"
+      }
     },
     {
       "cell_type": "code",
@@ -1868,6 +1869,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Cleaning and feature sanity"
+      ],
+      "metadata": {
+        "id": "qfmyGmWCAvI9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# ============================================================\n",
@@ -2296,6 +2306,17 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Summary\n",
+        "\n",
+        "Normalized Y/N fields, upper-cased categorical text, fixed 33 negative employee counts to the median of valid values, validated establishment years, encoded target numerically (Denied=0, Certified=1). Added prevailing_wage_yearly from unit conversion (Hour, Week, Month, Year). Dataset size preserved post-cleaning."
+      ],
+      "metadata": {
+        "id": "Qt33GPJwA14m"
+      }
     },
     {
       "cell_type": "code",
