--- a/FEasyVisa_Full_Code_vFinal_ErikVagshenian.ipynb
+++ b/FEasyVisa_Full_Code_vFinal_ErikVagshenian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMKOZnN6e9UoyYTcZkazlPo",
+      "authorship_tag": "ABX9TyPTvs1pm43gO358GPU+EiNy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,9 +38,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 0. Setup: Install & Imports\n",
+        "### 0.\tLibrary Installation\n",
         "\n",
-        "In order to prepare for the analysis, all essential Python libraries are installed and imported, including those for data manipulation (Pandas, NumPy), visualization (Matplotlib, Seaborn), and machine learning (scikit-learn, XGBoost, imbalanced-learn). This ensures consistent and reproducible processing, visualization, and modeling throughout the analysis."
+        "**Outcome**: All libraries were successfully installed, creating a reliable technical environment for end-to-end data analysis and model development.\n",
+        "\n",
+        "In order to enable comprehensive analysis and modeling, all necessary Python libraries are installed, including those for data manipulation, visualization, and machine learning such as pandas, NumPy, scikit-learn, XGBoost, and imbalanced-learn. This ensures that every dependency required for numerical computation, data cleaning, and classification modeling is properly configured for execution."
       ],
       "metadata": {
         "id": "IdzACSxlkH5C"
@@ -72,9 +74,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1. Import Libraries & Globals\n",
+        "### 2.\tLoad Dataset\n",
         "\n",
-        "In order to ensure reproducibility and consistency, the notebook imports key libraries, suppresses warnings, and sets a random seed. This establishes the analytical environment and guarantees that all model results, visualizations, and sampling processes can be replicated exactly."
+        "**Outcome**: The dataset is successfully loaded with 25,480 records and 12 attributes, establishing the foundation for classification modeling.\n",
+        "\n",
+        "In order to begin exploration, the visa dataset is loaded, containing 25,480 observations across 12 variables representing employee and employer attributes. These include numeric fields such as company size, year of establishment, and prevailing wage, and categorical fields such as continent, education, and region of employment. The target variable, case_status, indicates whether each visa was Certified or Denied, defining this as a binary classification problem."
       ],
       "metadata": {
         "id": "JOKK9k3ekQMN"
@@ -141,9 +145,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2. Load Dataset\n",
+        "### 2.\tLoad Dataset\n",
         "\n",
-        "In order to begin the analysis, a dataset of 25,480 visa applications across 12 attributes is loaded. Each record contains details about the employee (education, experience, training), employer (company size, year established), and job (region, prevailing wage, full-time status). The target variable, case_status, indicates whether a visa was certified or denied, defining this as a binary classification problem."
+        "**Outcome**: The dataset is successfully loaded with 25,480 records and 12 attributes, establishing the foundation for classification modeling.\n",
+        "\n",
+        "In order to begin exploration, the visa dataset is loaded, containing 25,480 observations across 12 variables representing employee and employer attributes. These include numeric fields such as company size, year of establishment, and prevailing wage, and categorical fields such as continent, education, and region of employment. The target variable, case_status, indicates whether each visa was Certified or Denied, defining this as a binary classification problem."
       ],
       "metadata": {
         "id": "UfY6ERO3kitf"
@@ -1286,7 +1292,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "### 3.\tData Understanding (Types, Missingness, Target Balance)\n",
+        "\n",
+        "**Outcome**: The dataset is complete and balanced enough for modeling, with Certified ≈ 67% and Denied ≈ 33%.\n",
+        "\n",
+        "In order to assess data integrity and understand class proportions, the dataset’s variable types, missing values, and target distribution are reviewed. No missing values are detected. The class balance shows that approximately 67% of visa applications are certified and 33% are denied, confirming moderate imbalance. Numeric fields display wide but valid ranges, indicating the need for normalization during preprocessing."
+      ],
       "metadata": {
         "id": "3usTr5_lksg5"
       }
@@ -1839,6 +1851,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 4.\tPrimary Cleaning (Essential, Non-destructive)\n",
+        "\n",
+        "**Outcome**: The dataset is cleaned and standardized, with consistent categorical and numeric features across all 25,480 records.\n",
+        "\n",
+        "In order to ensure reliable modeling, categorical inconsistencies are standardized, invalid numeric values (such as negative employee counts) are corrected using medians, and implausible establishment years are removed. Prevailing wages are normalized to an annualized rate for comparability across pay units. The target variable case_status is encoded numerically (Denied = 0, Certified = 1)."
+      ],
+      "metadata": {
+        "id": "GAJyxbNjxpZX"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# ============================================================\n",
@@ -2278,6 +2303,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 5.\tExploratory Data Analysis (Univariate)\n",
+        "\n",
+        "**Outcome**: Certified cases form the majority, and key applicant traits include high education levels, experience, and full-time employment in major U.S. regions.\n",
+        "\n",
+        "In order to understand the characteristics of each variable individually, distributions of numeric and categorical features are analyzed. Most applicants hold bachelor’s or master’s degrees, and the majority apply for full-time roles. Applications are concentrated in the Northeast, South, and West regions. Companies range widely in size and wage levels, with annual wages spanning from $2 to over $300,000. Most applicants have prior job experience, while few require training. Certified cases dominate, indicating potential class imbalance."
+      ],
+      "metadata": {
+        "id": "FsG-XBrHxv-H"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# ============================================================\n",
@@ -2432,6 +2470,19 @@
       },
       "execution_count": 44,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.\tExploratory Data Analysis (Bivariate)\n",
+        "\n",
+        "**Outcome**: Education, experience, region, and wage emerge as key determinants of visa certification outcomes.\n",
+        "\n",
+        "In order to identify factors influencing approval outcomes, relationships between independent variables and case_status are examined. Applicants with master’s or doctorate degrees have notably higher certification rates than those with high school education. Job experience significantly increases the likelihood of certification, while training requirements decrease it. Regionally, the Northeast and West show higher certification rates, corresponding with higher prevailing wages."
+      ],
+      "metadata": {
+        "id": "rN_ihI_Hx8jX"
+      }
     },
     {
       "cell_type": "code",
@@ -2606,6 +2657,19 @@
       },
       "execution_count": 45,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 7.\tSplit (60/20/20) & Preprocess\n",
+        "\n",
+        "**Outcome**: Data is divided into balanced training, validation, and testing subsets with standardized preprocessing applied uniformly across all inputs.\n",
+        "\n",
+        "In order to enable unbiased evaluation and prevent data leakage, the dataset is split into training (60%), validation (20%), and testing (20%) subsets while preserving the same ratio of certified and denied cases. A preprocessing pipeline is applied to handle missing values, scale numerical variables, and one-hot encode categorical ones. This ensures consistency and compatibility across all models."
+      ],
+      "metadata": {
+        "id": "FMQXYEXd0Ucl"
+      }
     },
     {
       "cell_type": "code",
@@ -4752,6 +4816,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 8.\tModel Building — ORIGINAL DATA (Class Weights)\n",
+        "\n",
+        "**Outcome**: Gradient Boosting achieves the best baseline with 82% F1, 86% recall for certified cases, and 49% denied specificity, highlighting strong approval prediction but weaker denial detection.\n",
+        "\n",
+        "In order to establish baseline performance, multiple machine learning models are trained on the original dataset using class weighting to account for imbalance. The models include Logistic Regression, Decision Tree, Random Forest, Bagging, AdaBoost, Gradient Boosting, and XGBoost. Gradient Boosting and XGBoost perform best with F1 scores around 0.82, recall near 86–88% for certified cases, and specificity of approximately 49% for denied cases."
+      ],
+      "metadata": {
+        "id": "cPnS70be0h5a"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# ============================================================\n",
@@ -4798,6 +4875,13 @@
       },
       "execution_count": 47,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "QnA0RUuW0mr2"
+      }
     },
     {
       "cell_type": "code",
