--- a/FEasyVisa_Full_Code_vFinal_ErikVagshenian.ipynb
+++ b/FEasyVisa_Full_Code_vFinal_ErikVagshenian.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTvs1pm43gO358GPU+EiNy",
+      "authorship_tag": "ABX9TyMisIoiuGBzm8+iebk8/naT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2661,11 +2661,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 7.\tSplit (60/20/20) & Preprocess\n",
+        "### 7.\tAnalytical Insights\n",
         "\n",
-        "**Outcome**: Data is divided into balanced training, validation, and testing subsets with standardized preprocessing applied uniformly across all inputs.\n",
+        "**Outcome**: Certification rates are highest among applicants with advanced education and high prevailing wages, confirming strong positive influence from wage and education.\n",
         "\n",
-        "In order to enable unbiased evaluation and prevent data leakage, the dataset is split into training (60%), validation (20%), and testing (20%) subsets while preserving the same ratio of certified and denied cases. A preprocessing pipeline is applied to handle missing values, scale numerical variables, and one-hot encode categorical ones. This ensures consistency and compatibility across all models."
+        "In order to identify deeper relationships before modeling, the code defines a helper function to compute certification rates by feature category and explores how certification varies across wage levels and education. Applicants earning above the 75th percentile of prevailing wage are analyzed by education level, region, and experience. The analysis reveals that higher wages, advanced education (master’s and doctorate), and prior job experience strongly increase the likelihood of certification."
       ],
       "metadata": {
         "id": "FMQXYEXd0Ucl"
@@ -4818,11 +4818,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 8.\tModel Building — ORIGINAL DATA (Class Weights)\n",
+        "### 8.\tData Preparation for Modeling\n",
         "\n",
-        "**Outcome**: Gradient Boosting achieves the best baseline with 82% F1, 86% recall for certified cases, and 49% denied specificity, highlighting strong approval prediction but weaker denial detection.\n",
+        "**Outcome**: Dataset split into Train (15,288), Validation (5,096), and Test (5,096) subsets; preprocessing pipeline successfully built with numeric scaling and categorical encoding.\n",
         "\n",
-        "In order to establish baseline performance, multiple machine learning models are trained on the original dataset using class weighting to account for imbalance. The models include Logistic Regression, Decision Tree, Random Forest, Bagging, AdaBoost, Gradient Boosting, and XGBoost. Gradient Boosting and XGBoost perform best with F1 scores around 0.82, recall near 86–88% for certified cases, and specificity of approximately 49% for denied cases."
+        "In order to prepare data for unbiased modeling, the dataset is split into 60% training, 20% validation, and 20% test subsets while preserving class proportions (Certified ≈ 67%, Denied ≈ 33%). A preprocessing pipeline is built using scikit-learn’s ColumnTransformer to handle numerical and categorical features—numerical columns are imputed with median values and scaled, while categorical variables are imputed with the most frequent value and one-hot encoded. This ensures consistent transformations across all models and prevents data leakage."
       ],
       "metadata": {
         "id": "cPnS70be0h5a"
